# e-certify

./: .cursorrules  .gitignore  Anchor.toml  CHANGELOG_TUAN2.md  CHANGELOG_WEEK1_TO_WEEK5.md  CHECKLIST_TUAN1.md  CHECKLIST_TUAN2.md  CHECKLIST_TUAN3.md  CHECKLIST_TUAN4.md  CONVERSION_SUMMARY.md  DEPLOYMENT.md  DEPLOY_ENV_CHECKLIST.md  FONT_SETUP.md  HARD_RESET_DEMO.md  PITCHING_PROGRESS_REPORT.md  PITCHING_VIDEO_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  SETUP_FONT_STEP_BY_STEP.md  SETUP_INSTRUCTIONS.md  SUMMARY_WEEK1_TO_WEEK3.md  SUMMARY_WEEK1_TO_WEEK5.md  TESTING_LOCALHOST.md  TESTING_TUAN2.md  TONG_HOP_WEEK1_TO_WEEK3.md  TUAN1_SUMMARY.md  TUAN2_SUMMARY.md  TUAN4_SUMMARY.md  build-and-test.ps1  build-and-test.sh  build-windows.ps1  deploy-program.sh  deploy.bat  deploy.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.js  sample_students.csv  (+8 more)
app/: globals.css  layout.tsx
app/(auth)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/(platform)/: layout.tsx
app/components/: BestInstructors.tsx  CurrentActivity.tsx  DashboardBanner.tsx  EnhancedBannerHero.tsx  LinkedInShareButton.tsx  QRScanner.tsx  (+11 more)
credify_program/: Cargo.toml
credify_program/src/: lib.rs
credify_program/tests/: credify_program.ts
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
lib/: demo-certificates.ts
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
scripts/: build-and-deploy.ps1  build-and-deploy.sh  create-collection.ts  download-font.js  init-tree.ts  test-tuan2.ts  test-tuan3.ts
ts/: adminMint.ts
(+57 files in other folders)
