[package]
name = "credify_program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "credify_program"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "=0.32.1"
spl-account-compression = "^0.2.0"
mpl-bubblegum = "^2.1.1"
solana-program = "1.18.26"
spl-token = "4.0"


