[package]
name = "e-certify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.0"
borsh = "1.3.0"
borsh-derive = "1.3.0"
mpl-bubblegum = "0.1.0"
mpl-token-metadata = "3.2.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = "1.0"
